fits on all screens now,fixed settings going under screen, no more keyboard squish

--- a/src/App.css
+++ b/src/App.css
@@ -108,7 +108,6 @@ html{
   width:50vw;
   height:5vh;
   margin: 0;
-  
 }
 
 .NavBar > :nth-child(1) {
@@ -334,3 +333,28 @@ html, body {
   }
 }
 
+.relative {
+  position: relative;
+}
+
+.bigWeatherIcon{
+  height:80%;
+}
+
+.individual-day{
+  font-size: 80%;
+  margin-right: 45%;
+}
+
+.margin-bottom-2{
+  margin-bottom: 2vh;
+}
+
+.hourly-item{
+  width:20%;
+  height: 40%;
+}
+
+.z-4{
+  z-index: 4;
+}
